--- a/common/assets/scss/application.scss
+++ b/common/assets/scss/application.scss
@@ -11,6 +11,7 @@ $govuk-font-family: "Inter", system-ui, sans-serif;
 @import "govuk-frontend/govuk/objects/all";
 
 @import "govuk-frontend/govuk/components/back-link/index";
+@import "govuk-frontend/govuk/components/breadcrumbs/index";
 @import "govuk-frontend/govuk/components/button/index";
 @import "govuk-frontend/govuk/components/checkboxes/index";
 @import "govuk-frontend/govuk/components/details/index";
