--- a/app/move/views/view.njk
+++ b/app/move/views/view.njk
@@ -116,13 +116,13 @@
     }) }}
   {% endif %}
 
-  {% if showPersonEscortRecordBanner and personEscortRecord %}
+  {% if showPersonEscortRecordBanner and personEscortRecord and not personEscortRecordIsConfirmed %}
     {% set html %}
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-two-thirds">
           {{ appTaskList(personEscortRecordtaskList) }}
 
-          {% if personEscortRecordIsComplete %}
+          {% if personEscortRecordIsCompleted %}
             <p>
               {{ t("messages::person_escort_record_complete.content") }}
             </p>
@@ -140,7 +140,34 @@
       allowDismiss: false,
       classes: "app-message--instruction govuk-!-padding-right-0",
       title: {
-        text: t("messages::person_escort_record_complete.heading") if personEscortRecordIsComplete else t("messages::person_escort_record_incomplete.heading")
+        text: t("messages::person_escort_record_complete.heading") if personEscortRecordIsCompleted else t("messages::person_escort_record_incomplete.heading")
+      },
+      content: {
+        html: html
+      }
+    }) }}
+  {% endif %}
+
+  {% if showPersonEscortRecordBanner and personEscortRecord and personEscortRecordIsConfirmed %}
+    {% set html %}
+      <p>
+        {{ t("messages::person_escort_record_confirmed.content", {
+          date: personEscortRecord.confirmed_at | formatDate,
+          time: personEscortRecord.confirmed_at | formatTime
+        }) | safe }}
+      </p>
+
+      {{ govukButton({
+        href: personEscortRecordUrl + "/print",
+        text: t("actions::print_person_escort_record")
+      }) }}
+    {% endset %}
+
+    {{ appMessage({
+      allowDismiss: false,
+      classes: "app-message--instruction govuk-!-padding-right-0",
+      title: {
+        text: t("messages::person_escort_record_confirmed.heading")
       },
       content: {
         html: html
@@ -256,14 +283,6 @@
       }),
       classes: "govuk-!-margin-bottom-0"
     }) }}
-  {% endif %}
-
-  {% if personEscortRecordIsComplete %}
-    <p>
-      <a href="{{ personEscortRecordUrl }}">
-        {{ t("actions::view_person_escort_record") }}
-      </a>
-    </p>
   {% endif %}
 
   {% if canCancelMove %}
