chore(components): Add support for inset text in card component
This extends the card component to support the inclusion of the
GOV.UK Inset Text component.

This pattern will be used to display a message if the item in the card
is in particular states, for example, with an incomplete Person Escort
Record.

--- a/common/components/card/template.njk
+++ b/common/components/card/template.njk
@@ -1,5 +1,6 @@
 {% from "tag/macro.njk" import appTag %}
 {% from "moj/components/badge/macro.njk" import mojBadge %}
+{% from "govuk/components/inset-text/macro.njk" import govukInsetText %}
 
 {% set headingLevel = params.headingLevel if params.headingLevel else 2 %}
 
@@ -60,6 +61,10 @@
           </li>
         {% endfor %}
       </ul>
+    {% endif %}
+
+    {% if params.insetText %}
+      {{ govukInsetText(params.insetText) }}
     {% endif %}
   </div>
 </div>
