--- a/common/components/card/_card.scss
+++ b/common/components/card/_card.scss
@@ -13,6 +13,10 @@ $_image-width: 80px;
     padding-top: 0;
     margin-top: -8px;
   }
+
+  .govuk-inset-text {
+    margin: govuk-spacing(3) 0 0;
+  }
 }
 
 .app-card--compact {
