chore(per): Add presenter to render flags as tag list
This creates a new presenter that will be used within the card
component and on the move detail view to render the flags for a move
from the Person Escort Record framework.

--- a/common/assets/scss/overrides/_govuk-frontend.scss
+++ b/common/assets/scss/overrides/_govuk-frontend.scss
@@ -13,3 +13,10 @@
 .govuk-hint * {
   color: $govuk-secondary-text-colour;
 }
+
+.govuk-inset-text--compact {
+  @include govuk-font($size: 16);
+  border-left-width: 4px;
+  color: $govuk-secondary-text-colour;
+  padding: govuk-spacing(1) govuk-spacing(2);
+}
