feat(per): Display flags from Person Escort Record on move detail
This introduces the ability to display a tag list from the Person
Escort Record framework if this feature is enabled.

It will replace the existing method of displaying the tags from the
assessment answers, but for now both need to live side by side until
the feature is completely released.

--- a/app/move/views/view.njk
+++ b/app/move/views/view.njk
@@ -168,12 +168,28 @@
       }) }}
     </span>
 
-    {% if tagList | length %}
+    {% if personEscortRecordIsEnabled %}
+      <div class="govuk-!-margin-top-2">
+        {% if not personEscortRecordIsComplete %}
+          {{ govukInsetText({
+            classes: "govuk-inset-text--compact govuk-!-margin-0",
+            text: t("person-escort-record::flags.incomplete")
+          }) }}
+        {% endif %}
+
+        {% if personEscortRecordIsComplete and personEscortRecordTagList | length %}
+          {% for tag in personEscortRecordTagList %}
+            {{ appTag(tag) }}
+          {% endfor %}
+        {% endif %}
+      </div>
+    {% elif tagList | length %}
+      {# TODO: Remove surrounding conditional once PER is fully enabled #}
       <div class="govuk-!-margin-top-2">
         {% for tag in tagList %}
           {{ appTag(tag) }}
         {% endfor %}
-      <div>
+      </div>
     {% endif %}
   </header>
 {% endblock %}
