--- a/app/move/views/_includes/assessment.njk
+++ b/app/move/views/_includes/assessment.njk
@@ -6,96 +6,10 @@
       }) }}
     </h2>
 
-    {% for panel in assessmentCategory.panels %}
-      {% call appPanel(panel) %}
-        {{ appMetaList({
-          classes: "app-meta-list--divider",
-          items: panel.items
-        }) }}
-      {% endcall %}
-    {% else %}
-      {{ appMessage({
-        classes: "app-message--muted govuk-!-margin-top-2",
-        allowDismiss: false,
-        content: {
-          text: t('assessment::no_items.text', {
-            context: assessmentCategory.key
-          })
-        }
-      }) }}
-    {% endfor %}
+    {{ assessmentContent(assessmentCategory) }}
 
     {% if not personEscortRecord %}
       {{ updateLink(updateLinks[assessmentCategory.key]) }}
     {% endif %}
   </section>
 {% endfor %}
-
-{% if move.to_location.location_type == 'court' %}
-  <section class="app-!-position-relative">
-    {% if move.from_location.location_type == 'prison' and not courtSummary.rows.length %}
-      <h2 class="govuk-heading-m govuk-!-margin-bottom-2 govuk-!-margin-top-7">
-        {{ t("moves::detail.court_hearings.heading", {
-          context: "with_count" if courtHearings.length > 1,
-          count: courtHearings.length
-        }) }}
-      </h2>
-
-      {% if courtHearings.length %}
-        {% for courtHearing in courtHearings %}
-          {% if courtHearings.length > 1 %}
-            <h3 class="govuk-heading-s govuk-!-margin-bottom-2 govuk-!-margin-top-6">
-              {{ t("moves::detail.court_hearings.subheading", {
-                context: "with_index",
-                index: loop.index
-              }) }}
-            </h3>
-          {% endif %}
-
-          {{ govukSummaryList(courtHearing.summaryList) }}
-
-          {% if not courtHearing.saved_to_nomis %}
-            {{ govukWarningText({
-              text: t("moves::detail.court_hearings.nomis_failed", {
-                context: "with_index" if courtHearings.length > 1,
-                index: loop.index
-              }),
-              iconFallbackText: "Warning"
-            }) }}
-          {% endif %}
-        {% endfor %}
-      {% else %}
-        {{ appMessage({
-          classes: "app-message--muted",
-          allowDismiss: false,
-          content: {
-            html: t("moves::detail.court_hearings.empty")
-          }
-        }) }}
-      {% endif %}
-    {% else %}
-      <h2 class="govuk-heading-m govuk-!-margin-bottom-2 govuk-!-margin-top-7">
-        {{ t("assessment::heading.text", {
-          context: "court"
-        }) }}
-      </h2>
-
-      {% if courtSummary.rows | length %}
-        {{ govukSummaryList(courtSummary) }}
-      {% else %}
-        {{ appMessage({
-          classes: "app-message--muted",
-          allowDismiss: false,
-          content: {
-            html: t("assessment::no_items.text", {
-              context: "court"
-            })
-          }
-        }) }}
-      {% endif %}
-    {% endif %}
-
-    {{ updateLink(updateLinks.court) }}
-  </section>
-{% endif %}
-
