--- a/common/components/framework-response/template.njk
+++ b/common/components/framework-response/template.njk
@@ -1,10 +1,12 @@
 {% if params.value and params.valueType %}
   {% if params.valueType === 'object' %}
-    {{ params.value.option }}{{ " — " + params.value.details if params.value.details }}
+    <p class="{{ params.classes }}">
+      {{ params.value.option }}{{ " — " + params.value.details if params.value.details }}
+    </p>
   {% endif %}
 
   {% if params.valueType === 'array' %}
-    <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-0 govuk-!-font-size-16">
+    <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-0 {{ params.classes }}">
       {% for option in params.value %}
         <li>{{ option }}</li>
       {% endfor %}
@@ -12,7 +14,7 @@
   {% endif %}
 
   {% if params.valueType === 'collection' %}
-    <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-0 govuk-!-font-size-16">
+    <ul class="govuk-list govuk-list--bullet govuk-list--spaced govuk-!-margin-top-0 {{ params.classes }}">
       {% for item in params.value %}
         <li>
           {{ item.option }}{{ " — " + item.details if item.details }}
@@ -22,7 +24,9 @@
   {% endif %}
 
   {% if params.valueType === 'string' %}
-    {{ params.value }}
+    <p class="{{ params.classes }}">
+      {{ params.value }}
+    </p>
   {% endif %}
 {% else %}
   {% if params.responded %}
